force-app/main/default/objects/Mercado__c/fields/MoedaPrimaria__c.field-meta.xml
<CustomField>
    <fullName>MoedaPrimaria__c</fullName>
    <description>Ativo Primário, aquele que é comprado na operações deste mercado</description>
    <formula>LEFT (Name ,FIND(&quot;/&quot;, Name )-1)</formula>
    <inlineHelpText>Ativo Primário, aquele que é comprado na operações deste mercado</inlineHelpText>
    <label>Moeda Primária</label>
    <type>Text</type>
</CustomField>