force-app/main/default/objects/Mercado__c/fields/PrecoMedio__c.field-meta.xml
<CustomField>
    <fullName>PrecoMedio__c</fullName>
    <formula>TotalComprado__c - TotalVendido__c /Quantidade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço Médio</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>