force-app/main/default/objects/Mercado__c/fields/Quantidade__c.field-meta.xml
<CustomField>
    <fullName>Quantidade__c</fullName>
    <label>Quantidade</label>
    <summarizedField>Ordem__c.QuandtidadeP__c</summarizedField>
    <summaryForeignKey>Ordem__c.Mecardo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>