force-app/main/default/objects/Mercado__c/fields/TotalComprado__c.field-meta.xml
<CustomField>
    <fullName>TotalComprado__c</fullName>
    <label>Total Comprado</label>
    <summarizedField>Ordem__c.Total__c</summarizedField>
    <summaryFilterItems>
        <field>Ordem__c.Tipo__c</field>
        <operation>equals</operation>
        <value>Compra</value>
    </summaryFilterItems>
    <summaryForeignKey>Ordem__c.Mecardo__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>